--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 						class="hide"
 					/>
 				</div>
-				<div id="navLinks" class="hide">
+				<div id="burgerLinks" class="hide">
+					<a href="#">Home</a>
+					<a href="#">Products</a>
+					<a href="#">Employees</a>
+				</div>
+				<div id="desktopLinks">
 					<a href="#">Home</a>
 					<a href="#">Products</a>
 					<a href="#">Employees</a>
