--- a/index.html
+++ b/index.html
@@ -35,6 +35,41 @@
 			</div>
 		</nav>
 		<div id="employees"></div>
-		<footer id="footer"></footer>
+		<footer>
+			<div class="footerLinks">
+				<div>
+					<ul>
+						<h2>COMPANY</h2>
+						<li><a href="#">Our story</a></li>
+						<li><a href="#">Terms of use</a></li>
+						<li><a href="#">Privacy policy</a></li>
+					</ul>
+				</div>
+				<div>
+					<ul>
+						<h2>RESOURCES</h2>
+						<li><a href="#">Our blog</a></li>
+						<li><a href="#">Sitemap</a></li>
+						<li><a href="#">Customer Support</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="contactOptions">
+				<div class="footerSoMe">
+					<figure>
+						<a href="#"><img src="/assets/image/facebook.png" alt="" /></a>
+					</figure>
+					<figure>
+						<a href="#"><img src="/assets/image/linkedin.png" alt="" /></a>
+					</figure>
+					<figure>
+						<a href="#"><img src="/assets/image/rss.png" alt="" /></a>
+					</figure>
+					<figure>
+						<a href="#"><img src="/assets/image/twitter.png" alt="" /></a>
+					</figure>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
