Remade the SW again with a different page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 		<title>Employees</title>
 		<script src="/assets/js/script.js" defer></script>
 		<link rel="stylesheet" href="/assets/css/main.css" />
+		<link rel="manifest" href="./manifest.json" />
+		<script src="./app.js" type="module" defer></script>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="96x96"
+			href="./assets/image/icons/maskable_icon_x96.png"
+		/>
 	</head>
 	<body>
 		<nav id="navbar">
